force-app/main/default/objects/Flow_Rule__mdt/Flow_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Flow Rule</label>
    <pluralLabel>Flow Rules</pluralLabel>
</CustomObject>