force-app/main/default/objects/Flow_Rule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Error</fullName><default>false</default></value>
            <value><fullName>Warning</fullName><default>true</default></value>
            <value><fullName>Info</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>